# nba-trading-bot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
dashboard/: .env.example  package-lock.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: BetsPanel.tsx  CalibrationChart.tsx  EmptyState.tsx  MetricTile.tsx  ModelSelector.tsx  PredictionsTable.tsx  ThemeToggle.tsx
dashboard/src/lib/: api.ts  types.ts
db/migrations/: 001_init.sql  002_prediction_as_of.sql  003_player_game_stats.sql  004_team_box_raw_counts.sql  005_bets_and_calibration.sql
scripts/: SCHEDULING.md  run_phase.sh  schedule.sh
scripts/launchd/: com.nba-bot.odds.plist.template  com.nba-bot.postgame.plist.template  com.nba-bot.pregame.plist.template
src/nba_bot/: ROADMAP.md  betting.py  config.py  markets.py  pipeline.py
src/nba_bot/agents/: analysis_agent.py  betting_agent.py  data_agent.py  evaluation_agent.py
src/nba_bot/api/: __init__.py  app.py  schemas.py
src/nba_bot/backtest/: loader.py  report.py  runner.py
src/nba_bot/cli/: main.py
src/nba_bot/data/: embeddings.py  injuries.py  nba_stats.py  news_feeds.py  odds_api.py  team_lookup.py
src/nba_bot/db/: engine.py  models.py
src/nba_bot/features/: calibration.py  four_factors.py  on_off.py
src/nba_bot/rag/: ingest.py  retrieval.py
tests/: test_analysis.py  test_api.py  test_backtest.py  test_betting.py  test_calibration.py  test_data_agent.py  test_evaluation.py  test_four_factors.py  test_news.py  test_odds.py  test_on_off.py  test_pipeline.py
